--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.MainActivity2"></activity>
         <activity android:name=".view.MainBisActivity"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
