--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.MainActivity2"></activity>
+        <activity android:name=".view.MainActivity3"></activity>
         <activity android:name=".view.MainBisActivity"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
