--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.MainActivity2"></activity>
-        <activity android:name=".view.MainActivity3"></activity>
+        <activity android:name=".view.MainActivity2"
+            android:parentActivityName=".view.MainBisActivity"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="Pokémon"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme3"/>
+
+        <activity android:name=".view.MainActivity3"
+            android:parentActivityName=".view.MainBisActivity2"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="Ability"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme4"/>
         <activity android:name=".view.MainBisActivity"
+            android:parentActivityName=".view.MainActivity"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="Pokémon"
@@ -23,6 +39,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"/>
         <activity android:name=".view.MainBisActivity2"
+            android:parentActivityName=".view.MainActivity"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="Ability"
